[package]
name = "hel"
version = "0.1.0"
authors = ["ok2"]
edition = "2021"

[lib]
name = "hel"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.1"
anyhow = "1.0.66"
lazy_static = "1.4.0"
regex = "1.6.0"
thiserror = "1.0.37"
anyerror = "0.1.7"
sha1 = "0.10.5"
base64 = "0.20.0"
rpassword = "7.2.0"
shlex = "1.1.0"
shellexpand = "3.0.0"
scopeguard = "1.1.0"

[target.'cfg(not(wasm))'.dependencies]
chrono = "0.4.23"
rand = "0.8.5"
home = "0.5.4"
rustyline = "10.0.0"
