[package]
name = "helwasm"
version = "0.1.0"
authors = ["ok2"]
edition = "2021"

[target.'cfg(wasm32)']
[lib]
name = "helwasm"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hel = { version = "0.1.0", path = "../hel" }
wasm-bindgen = "0.2.83"
