[package]
name = "helwasm"
version = "0.1.0"
authors = ["ok2"]
edition = "2021"

[lib]
name = "helwasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hel = { version = "0.1.0", path = "../hel" }
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [ 'Document' ]
